--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 12-10-04: Guild creation skipped ID if user relogged in first. [AlexKreuz]
- 12-09-04: Temporary server string variables being saved is fixed. [Tsusai]
- 12-07-04: Advanced classes vending fixed. [Tsusai]
- 12-06-04: MENU and SETSTR can replace variables. [Tsusai]
- 12-06-04: Fixed WHO2 using the GM's stats. [Tsusai]
- 12-05-04: Fixed pet caused database error when not hatched but in inventory. [AlexKreuz]
- 12-05-04: Fixed pet undefined errors. [AlexKreuz]
- 12-05-04: Disabled mercenaries. No mercenary database provided in the CVS. [AlexKreuz]
- 12-05-04: Fixed Fusion form yet again. Stop committing main.dfm and update the cvs first. [AlexKreuz]
- 12-03-04: Revived my #call_mercenary beta/mercenary system.  (Still in Beta) [Darkhelmet]
- 12-01-04: Removed redundant line in universal broadcast procedure. [Tsusai]
- 12-01-04: Restructured script.pas to share procedures for similar commands. [Tsusai]
- 12-01-04: Removed universal warp procedure. [Tsusai]
- 12-01-04: Increased MaxJob# to allow baby classes (No Skills). [Tsusai]
- 12-01-04: Fixed Fusion form again. [AlexKreuz]
- 12-01-04: Undid dependancy of weiss.ini autoupdate on release version. [AlexKreuz]
- 11-30-04: Checkstr can now also check case sensitive strings (==). [Tsusai]
- 11-30-04: Added cebuPH's inputc as inputstr. [Tsusai]
- 11-30-04: Removed madscreenshot (my bad). [Tsusai]
- 11-30-04: Weiss.ini auto-update now depends on the release version. [Tsusai]
- 11-28-04: Fixed UPnP & WAC errors as reported in R. [AlexKreuz]
- 11-27-04: Non existant character in ActiveChars caused crash. [AlexKreuz]
- 11-26-04: Auto-updating of weiss.ini. [AlexKreuz]
- 11-26-04: Undefined map caused crash for Doubel Strafe (PSS). [AlexKreuz]
- 11-26-04: Fixed PVP Disconnect calculation problems. [AlexKreuz]