@@ -76,6 +76,7 @@ var
     GM_RCON : Byte;
     GM_JAIL : Byte;
     GM_UNJAIL : Byte;
+    GM_CALL_MERCENARY : Byte;
 
     GM_AEGIS_B : Byte;
     GM_AEGIS_NB : Byte;
@@ -140,8 +141,6 @@ var
     GM_ATHENA_RAISE : Byte;
     GM_ATHENA_RAISEMAP : Byte;
 
-    {Darkhelmet's "Fun Stuff"}
-    GM_CALL_MERCENARY : Byte;
 
     GM_Access_DB : TIntList32;
 
@@ -214,6 +213,7 @@ var
     function command_rcon(str : String) : String;
     function command_jail(tc : TChara; str : String) : String;
     function command_unjail(tc: TChara; str : String) : String;
+    function command_call_mercenary(tc : TChara; str : String) : String;
 
     function command_aegis_b(str : String) : String;
     function command_aegis_bb(tc : TChara; str : String) : String;
@@ -278,8 +278,6 @@ var
     function command_athena_raise(tc : TChara) : String;
     function command_athena_raisemap(tc : TChara) : String;
 
-    {Darkhelmet Commands}
-    function command_callmercenary(tc : TChara; str : String) : String;
 
 implementation
 
@@ -505,6 +503,7 @@ Called when we're shutting down the server *only*
         ini.WriteString('Fusion GM Commands', 'RCON', IntToStr(GM_RCON));
         ini.WriteString('Fusion GM Commands', 'JAIL', IntToStr(GM_JAIL));
         ini.WriteString('Fusion GM Commands', 'UNJAIL', IntToStr(GM_UNJAIL));
+        // Placeholder for CALL_MERCENARY command.
 
         ini.WriteString('Aegis GM Commands', 'AEGIS_B', IntToStr(GM_AEGIS_B));
         ini.WriteString('Aegis GM Commands', 'AEGIS_NB', IntToStr(GM_AEGIS_NB));
@@ -657,7 +656,7 @@ Called when we're shutting down the server *only*
             else if ( (copy(str, 1, length('rcon')) = 'rcon') and (check_level(tc, GM_RCON)) ) then error_msg := command_rcon(str)
             else if ( (copy(str, 1, length('jail')) = 'jail') and (check_level(tc, GM_JAIL)) ) then error_msg := command_jail(tc, str)
             else if ( (copy(str, 1, length('unjail')) = 'unjail') and (check_level(tc, GM_UNJAIL)) ) then error_msg := command_unjail(tc, str)
-            else if ( (copy(str, 1, length('call_mercenary')) = 'call_mercenary') and (check_level(tc, GM_CALL_MERCENARY)) ) then error_msg := command_callmercenary(tc, str)
+            // Extremely Buggy GM Command. I don't want this enabled unless it works. else if ( (copy(str, 1, length('call_mercenary')) = 'call_mercenary') and (check_level(tc, GM_CALL_MERCENARY)) ) then error_msg := command_call_mercenary(tc, str)
         end else if gmstyle = '@' then begin
             if ( (copy(str, 1, length('heal')) = 'heal') and (check_level(tc, GM_ATHENA_HEAL)) ) then error_msg := command_athena_heal(tc, str)
             else if ( (copy(str, 1, length('kami')) = 'kami') and (check_level(tc, GM_ATHENA_KAMI)) ) then error_msg := command_athena_kami(tc, str)
@@ -3162,9 +3161,7 @@ Called when we're shutting down the server *only*
         end;
     end;
 
-    {Darkhelmet's Call Mercenary}
-    //Syntax #call_mercenary <monstername>, <custom name>
-    function command_callmercenary(tc : TChara; str : String) : String;
+    function command_call_mercenary(tc : TChara; str : String) : String;
 	var
         i, j, k : Integer;
         tMerc : TMob;
@@ -3172,44 +3169,38 @@ Called when we're shutting down the server *only*
         mercName : PChar;
         customName : String;
         sl:TStringList;
-        //tc1 : TChara;
     begin
-      if tc.mercenaryID = 0 then begin
         sl := TStringList.Create;
-
-        Result := 'GM_CALL_MERCENARY Failed.';
-
-        sl := TStringList.Create;
-        sl.DelimitedText := Copy(str, 6, 256);
-
-        if sl.Count <> 3 then Exit;
-
-        customName := sl.Strings[2];
-
-        tm := tc.MData;
-        tMerc := TMob.Create;
-
-        //mercName := PChar(Copy(str, 16, 256));
-        mercName := PChar(sl.Strings[1]);
-        mercName := PChar(uppercase(String(mercName)));
-
-        tMerc := CreateMercenary(tm, PChar(mercName), tc, tMerc, customName);
-
-        if tMerc.JID = 0 then begin
-            Result := 'GM_CALL_MERCENARY Failed.  Invalid Monster name';
-            exit;
-        end;
-
-        //UpdateMonsterLocation(tm, tMerc);
-        //SendMonsterRelocation(tm, tMerc);
         
-        Result := 'GM_CALL_MERCENARY Success.';
-        //SendMMove( tc.Socket, tMerc, tMerc.Point, tc.Point, tc.ver2);
+        if tc.mercenaryID = 0 then begin
 
-        //SendBCmd( tm, tMerc.Point, 58, tc, True );
+            Result := 'GM_CALL_MERCENARY Failed.';
+
+            sl := TStringList.Create;
+            sl.DelimitedText := Copy(str, 6, 256);
+
+            if sl.Count <> 3 then Exit;
+
+            customName := sl.Strings[2];
+
+            tm := tc.MData;
+            tMerc := TMob.Create;
+
+            mercName := PChar(sl.Strings[1]);
+            mercName := PChar(uppercase(String(mercName)));
+
+            tMerc := CreateMercenary(tm, PChar(mercName), tc, tMerc, customName);
+
+            if tMerc.JID = 0 then begin
+                Result := 'GM_CALL_MERCENARY Failed.  Invalid Monster name.';
+                exit;
+            end;
+
+            Result := 'GM_CALL_MERCENARY Success.';
+
+        end else Result := 'GM_CALL_MERCENARY Failed. You already have a mercenary.';
+
         sl.Free;
-
-      end else Result := 'GM_CALL_MERCENARY Fail, you already have a mercenary';
    	end;
 
 
