@@ -1,6 +1,8 @@
 --------------------------------------------------------------------------------
  Fusion 1.213 - November 12th, 2004
 --------------------------------------------------------------------------------
+- 12-10-04: Disabled call_mercenary gm command. Includes way too many bugs. [AlexKreuz]
+- 12-10-04: Cleaned up ghetto call_mercenary code. Let's start keeping Fusion code clean. [AlexKreuz]
 - 12-10-04: Guild creation skipped ID if user relogged in first. [AlexKreuz]
 - 12-09-04: Temporary server string variables being saved is fixed. [Tsusai]
 - 12-07-04: Advanced classes vending fixed. [Tsusai]
